feat: added functionality to run notebooks on this project with uv, also added a vscode task to easily run the corresponding uv command to open jupyter

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,7 @@
         }
     },
     // Enable BasedPyright type checking
-    "basedpyright.analysis.typeCheckingMode": "basic"
+    "basedpyright.analysis.typeCheckingMode": "basic",
+    "typescript.tsc.autoDetect": "off",
+    "npm.autoDetect": "off"
 }
