--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,12 @@ classifiers = [
 
 # ---- Main dependencies ----
 
-dependencies = []
+dependencies = [
+    "jupyter>=1.1.1",
+    "numpy>=2.3.4",
+    "pandas>=2.3.3",
+    "scikit-learn>=1.7.2",
+]
 
 
 # ---- Dev dependencies ----
@@ -49,6 +54,7 @@ dev = [
     "rich>=14.0.0",
     "basedpyright>=1.29.1",
     "funlog>=0.2.1",
+    "ipykernel>=7.1.0",
 ]
 
 [project.scripts]
